syntax = "proto3";
package pb;
import "rpcInfo.proto";

// The greeting service definition.
service ForwardToLogic {
  // Sends a greeting
  rpc ForwardTLP (ForwardTLPRequest) returns (ForwardTLPResponse) {}
}

message ForwardTLPRequest {
	RpcInfo RpcInfo = 1;

	uint32 messageType = 11;	//消息类型
	bytes protoBuf = 12;		//消息对应的protoBuf数据
}

message ForwardTLPResponse {
	string code = 1;	//回应的响应码
	string desc = 2;	//回应码的描述
	uint64 connId = 3;

	uint32 messageType = 11;	//消息类型
	bytes protoBuf = 12;		//消息对应的protoBuf数据
}





